--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^6.2.4",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -14,6 +15,8 @@
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.10",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
